# arrow-issue

./: Cargo.toml  README.adoc
parquet/: input.parquet  output.parquet
