[package]
name = "concat-parquet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
parquet = { version = "20.0.0", default-features = false, features = [ "arrow", "snap" ] }
arrow = { version = "20.0.0", default-features = false }
# parquet = { git = "https://github.com/tustvold/arrow-rs", branch = "fix-map-array-reader", default-features = false, features = [ "arrow", "snap" ] }
# arrow = { git = "https://github.com/tustvold/arrow-rs", branch = "fix-map-array-reader", default-features = false }
